app-code/sonarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            # Hardlink configuration root mapping
            - name: nexus-pool
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: nexus-pool
          hostPath:
            path: /mnt/nexus_pool
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  selector:
    app: sonarr
  type: NodePort
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      nodePort: 30489
