app-code/sonarr/sonarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`sonarr.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: sonarr-svc, port: 8989}]
